next
- Updated cxxopts to v3.0.0

0.3.0
- Added option -f to begin reading file at given offset
- Added option -l to process exact length in bytes
- Added option -p to pack data into 8, 16, or 32 bit words
- Added option -e to swap endianess for 16 or 32 bit words
- End of line character can be set with --eol option

0.2.0
- Split writing data out into chunks instead of attempting to write the entire file at once
  - Fixes file size limitation
- Added some progress feedback output
- Pressing Ctrl-C will close file buffers & exit cleanly
- Support command-line options:
  - help: show a help message
  - version: show version info
  - chunksize: set chunk write size
  - stdvector: additionally store data in std::vector

0.1.3
- Cleaned up trailing whitespace in output file
- Use tabs instead of spaces after newlines
- Disabled storing as std::vector
- Fixed files not being read if not in nested directory structure

0.1.2
- Support copying char data in std::vector for C++
- Always use LF line endings in output file
- Fixed output filename & directory
- Ouput comment with header guard name after "#endif" statement
- Print "exported" message on success
- Fixed closing file buffer before exiting if file doesn't exist

0.1.2 (Python)
- Python 2 support ended
- Always use LF line endings in output file

0.1.0
- Changed license to MIT
- Support building with CMake

0.0.1
- Initial release