@@ -1,5 +1,6 @@
 next
 - Updated cxxopts to v3.0.0
+- Added PYTHON option to CMake config to build for Python
 
 0.3.0
 - Added option -f to begin reading file at given offset
